[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
env_logger = "0.11.5"
futures = "0.3.30"
sanitize-filename = "0.5.0"
serde = "1.0.207"
serde_derive = "1.0.207"
serde_json = "1.0.125"
tokio = "1.39.2"
tracing = "0.1.40"
